# anglican_calendar

./: .gitignore  Cargo.toml  README.md
data/: extra-fixes.ron  fixes.ron
data/cals/: aca-2019.ical  aca-2020.ical  aca-2021.ical  aca-del-2019.ical  acc-2019.ical  acc-2020.ical  acc-2021.ical  acsa-2019.ical  acsa-2020.ical  acsa-2021.ical  all-2019.ical  all-2021.ical  all-del-2019.ical  bcp-2019.ical  bcp-2020.ical  bcp-2021.ical  cofe-2019.ical  cofe-2020.ical  cofe-2021.ical  cofe-del-2019.ical  ecusa-2019.ical  ecusa-2020.ical  ecusa-2021.ical  ecusa-del-2019.ical  hkskh-2019.ical  hkskh-2020.ical  hkskh-2021.ical  hkskh-del-2019.ical
data/edited/: cofe.data
data/edits/: fest.fixes  hkskh.fixes
data/final/: aca.data  acc.data  acsa.data  all.data  bcp.data  cofe.data  ecusa.data  hkskh.data
data/original/: aca.txt  cofe.txt  ecusa.txt  hkskh.txt
data/raw/: aca.data  cofe.data  ecusa.data  hkskh.data
data/reports/: aca-2019.html  aca-2020.html  aca-2021.html  acc-2019.html  acc-2020.html  acc-2021.html  acsa-2019.html  acsa-2020.html  acsa-2021.html  all-2019.html  all-2021.html  bcp-2019.html  bcp-2020.html  bcp-2021.html  cofe-2019.html  cofe-2020.html  cofe-2021.html  ecusa-2019.html  ecusa-2020.html  ecusa-2021.html  hkskh-2019.html  hkskh-2020.html  hkskh-2021.html
edit_data/: Cargo.toml
edit_data/src/: main.rs
exper/: Cargo.toml
exper/src/: main.rs
old/: cofe.fixes  tagfix.rs
old/fixtags/: Cargo.toml
old/fixtags/src/: main.rs
process_data/: Cargo.toml
process_data/src/: main.rs
scripts/: build.sh  delete-old.sh  edit.sh  gendoc.sh  make-all-cals.sh  make-all.sh  make-cal.sh  make-data.sh  release-copy.sh  run-reports.sh  start.sh  update.sh
scripts/old/: make-data.sh
src/: calendar.rs  lib.rs  main.rs  year_calendar.rs
