[package]
name = "anglican_calendar"
version = "0.1.0"
authors = ["martin <m.e@acm.org>"]
edition = "2018"

[dependencies]
ansi_term = "0.11.0"
serde = { version = "1.0.94", features = ["rc"] }
serde_derive = "1.0.94"
ron = "0.5.1"
structopt = "0.2.18"
chrono = { version = "0.4.7", features = ["serde"] }
icalendar = "0.6.0"
color-backtrace = "0.2.1"
