[package]
name = "anglican_calendar"
version = "0.1.4"
authors = ["martin <m.e@acm.org>"]
edition = "2018"
description = "Calculates the holy days of a calendar of an Anglican church for a given year"
repository = "github.com/martinellison/anglican_calendar"
readme="README.md"
keywords=["religious", "anglican", "calendar"]
# categories="date-and-time"
license="GPL3"
# license-file="COPYING"

[badges]

maintenance = { status = "experimental" }

[dependencies]
ansi_term = "0.12.1"
serde = { version = "1.0.117", features = ["rc"] }
serde_derive = "1.0.117"
ron = "0.6.2"
structopt = "0.3.21"
chrono = { version = "0.4.19", features = ["serde"] }
icalendar = "0.9.0"
color-backtrace = "0.5.0"
askama = "0.10.5"
enum-utils = "0.1.2"
strum = "0.20.0"
strum_macros = "0.20.1"
